welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: not found: value ||
  if (weekday==false)|| (vacation==true){
                     ^sleepIn:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if (weekday==false)|| (vacation==true){
  ^